# webrtcwebsink

./: Cargo.toml  pyproject.toml  test_webrtcwebsink.py
rswebsink/: lib.rs  main.rs
rswebsink/websink/: imp.rs  mod.rs  server.rs
tests/: rswebsink_integration_test.rs
webrtcwebsink/: plugin.py  signaling.py
webrtcwebsink/static/: index.html  webrtc.js
websink/: imp.rs
